Added cookies/sessions, password-encryption

--- a/views/components/signin.ejs
+++ b/views/components/signin.ejs
@@ -17,7 +17,7 @@
             <div class="rounded-md shadow-sm -space-y-px">
                 <div class="py-1">
                     <label for="email-address" class="font-semibold text-sm text-gray-600 py-1">Email address</label>
-                    <input id="email-address" name="email" type="email" autocomplete="email" required
+                    <input id="email-address" name="username" type="email" autocomplete="email" required
                         class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm z-0">
                 </div>
                 <div class="py-1">
