Added Google Oauth2.0

--- a/views/components/signup.ejs
+++ b/views/components/signup.ejs
@@ -76,18 +76,18 @@
         </div>
         <!-- social logins -->
         <div class="grid grid-cols-3 gap-2">
-            <span>
+            <a href="/auth/facebook">
                 <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-blue-600"><i
                         class="fab fa-facebook text-lg text-gray-600 group-hover:text-white"></i></button>
-            </span>
-            <span>
+            </a>
+            <a href="/auth/google">
                 <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-red-600"><i
                         class="fab fa-google text-lg text-gray-600 group-hover:text-white"></i></button>
-            </span>
-            <span>
-                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-blue-600"><i
+            </a>
+            <a href="/auth/twitter">
+                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-cyan-600"><i
                         class="fab fa-twitter text-lg text-gray-600 group-hover:text-white"></i></button>
-            </span>
+            </a>
         </div>
     </div>
 </div>
