--- a/views/components/dashboard.ejs
+++ b/views/components/dashboard.ejs
@@ -79,13 +79,8 @@
                                                 tabindex="-1" id="menu-item-1">Support</a>
                                             <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem"
                                                 tabindex="-1" id="menu-item-2">License</a>
-                                            <form role="none">
-                                                <button type="submit"
-                                                    class="text-gray-700 block w-full text-left px-4 py-2 text-sm"
-                                                    role="menuitem" tabindex="-1" id="menu-item-3">
-                                                    Sign out
-                                                </button>
-                                            </form>
+                                            <a href="/logout" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem"
+                                                tabindex="-1" id="menu-item-2">Logout</a>
                                         </div>
                                     </div>
 
