Some visual changes

--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -40,10 +40,10 @@
                             class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Project</a>
 
                         <a href="#"
-                            class="hover:text-blue-600 hover:underline under px-3 py-2 rounded-md text-sm font-medium">Pricing</a>
+                            class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Pricing</a>
 
                         <a href="#"
-                            class="hover:text-blue-600 hover:underline under px-3 py-2 rounded-md text-sm font-medium">Blogs</a>
+                            class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Blogs</a>
                     </div>
                 </div>
             </div>
@@ -71,10 +71,10 @@
 
             <a href="#" class="block px-3 py-2 rounded-md text-base font-medium">Blogs</a>
 
-            <a href="/signin" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium block"
+            <a href="/signin" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
                 aria-current="signin">Sign In</a>
 
-            <a href="/signup" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium block"
+            <a href="/signup" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
                 aria-current="signup">Sign Up</a>
 
         </div>
