--- a/views/pages/hero.ejs
+++ b/views/pages/hero.ejs
@@ -5,4 +5,5 @@
 <%- include("../components/footer"); -%>
 <%- include("../components/toast"); -%>
 <script src="js/index.js"></script>
+<!-- <script src="js/dashboard.js"></script> -->
 <%- include("../partials/footer"); -%>
