--- a/views/components/dashboard.ejs
+++ b/views/components/dashboard.ejs
@@ -1,8 +1,8 @@
 <div class="bg-gray-50">
     <div class="">
-        <div class="grid grid-cols-4 gap-2">
+        <div class="grid grid-cols-10 gap-2">
             <!-- side navigation -->
-            <div class="col-span-1 h-screen bg-gray-100 sticky top-0">
+            <div class="col-span-2 h-screen bg-gray-100 sticky top-0">
                 <!-- brand logo -->
                 <div class="py-4 text-2xl font-extrabold pl-4 sm:pl-6 lg:pl-8">
                     <a href="/">
@@ -14,12 +14,12 @@
                     <!-- menu item -->
                     <div class="flex w-full my-1 hover:bg-gray-200 focus:text-white pl-4 sm:pl-6 lg:pl-8">
                         <h1 class="py-2 font-semibold text-gray-600">
-                            <i class="fas fa-user pr-2"></i>Client
+                            <i class="fas fa-user pr-2"></i>My Urls
                         </h1>
                     </div>
                     <div class="flex w-full my-1 hover:bg-gray-200 focus:text-white pl-4 sm:pl-6 lg:pl-8">
                         <h1 class="py-2 font-semibold text-gray-600">
-                            <i class="fas fa-archive pr-2"></i>Archive
+                            <i class="fas fa-archive pr-2"></i>Archived
                         </h1>
                     </div>
                     <div class="flex w-full my-1 hover:bg-gray-200 focus:text-white pl-4 sm:pl-6 lg:pl-8">
@@ -34,11 +34,6 @@
 
                     <div class="flex w-full my-1 hover:bg-indigo-100 pl-4 sm:pl-6 lg:pl-8">
                         <h1 class="py-2 font-semibold text-gray-600">
-                            <i class="fas fa-donate pr-2"></i>Contribute
-                        </h1>
-                    </div>
-                    <div class="flex w-full my-1 hover:bg-indigo-100 pl-4 sm:pl-6 lg:pl-8">
-                        <h1 class="py-2 font-semibold text-gray-600">
                             <i class="fab fa-github pr-2"></i>Github
                         </h1>
                     </div>
@@ -47,9 +42,14 @@
                             <i class="fab fa-twitter pr-2"></i>Twitter
                         </h1>
                     </div>
+                    <div class="flex w-full my-1 hover:bg-indigo-100 pl-4 sm:pl-6 lg:pl-8">
+                        <h1 class="py-2 font-semibold text-gray-600">
+                            <i class="fas fa-donate pr-2"></i>Contribute
+                        </h1>
+                    </div>
                 </div>
             </div>
-            <div class="col-span-3">
+            <div class="col-span-8">
                 <!-- top navbar -->
                 <div class="sticky top-0 bg-white shadow-b pr-4 sm:pr-6 lg:pr-8">
                     <div class="py-3 flex justify-between">
@@ -62,12 +62,14 @@
                         <div>
                             <div class="flex">
                                 <div>
+                                    <input name="longUrl" id="longUrl" placeholder="Enter long url"
+                                        class="border-2 outline-none border-indigo-600 rounded-md py-2 pl-4 pr-2 placeholder:font-medium placeholder:text-sm placeholder:text-gray-400">
                                     <button
-                                        class=" mx-4 py-2 px-4 font-semibold text-sm border-2 border-gray-200 bg-white rounded-md">Create
+                                        class=" mx-4 py-2 px-4 font-semibold border-2 border-indigo-400 bg-indigo-600 text-white text-sm rounded-md">Create
                                         Url</button>
                                 </div>
                                 <div id="profile"
-                                    class="relative rounded-full h-10 w-10 bg-profile-avtar bg-cover bg-center border-gray-200 border-2">
+                                    class="relative rounded-full h-10 w-10 bg-profile-avtar bg-cover bg-center border-stone-200 border-2">
                                     <!-- dropdown -->
                                     <div class="hidden origin-top-right absolute right-0 mt-12 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
                                         role="menu">
@@ -79,8 +81,8 @@
                                                 tabindex="-1" id="menu-item-1">Support</a>
                                             <a href="#" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem"
                                                 tabindex="-1" id="menu-item-2">License</a>
-                                            <a href="/logout" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem"
-                                                tabindex="-1" id="menu-item-2">Logout</a>
+                                            <a href="/logout" class="text-gray-700 block px-4 py-2 text-sm"
+                                                role="menuitem" tabindex="-1" id="menu-item-2">Logout</a>
                                         </div>
                                     </div>
 
@@ -150,3 +152,25 @@
         </div>
     </div>
 </div>
+
+<!-- <div class="backdrop-blur-sm bg-stone-900 opacity-80 w-full h-full fixed top-0 left-0">
+    <div
+        class="w-11/12 sm:w-4/5 md:w-3/4 lg:w-1/2 h-1/2 bg-gray-600 backdrop-blur-sm shadow-2xl rounded-md border-2 border-gray-900  absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+        <div>
+            <div class="text-right py-4 px-4">
+                <button class="rounded-md bg-slate-800 h-8 w-8"><i class="fas fa-times bg-gray-800 text-white"></i></button>
+            </div>
+            <div class="px-4 sm:px-6 md:px-8 lg:px-12">
+                <div class="py-2">
+                    <label for="longUrl" class="font-semibold text-sm text-gray-600 py-1 block">Enter the long
+                        url</label>
+                    <input type="url" name="longUrl" required id="longUrl" placeholder="https://example.com"
+                        class="py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm placeholder:text-sm placeholder:font-semibold placeholder:text-gray-400">
+                </div>
+                <button type="submit"
+                    class="my-2 border-2 font-semibold text-sm rounded-md block w-full py-2 px-4 border-transparent text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Shorten
+                </button>
+            </div>
+        </div>
+    </div>
+</div> -->
