--- a/views/components/signin.ejs
+++ b/views/components/signin.ejs
@@ -12,7 +12,7 @@
                 </a>
             </p>
         </div>
-        <form class="mt-8 space-y-6" action="#" method="POST">
+        <form class="mt-8 space-y-6" action="/signin" method="POST">
             <input type="hidden" name="remember" value="true">
             <div class="rounded-md shadow-sm -space-y-px">
                 <div class="py-1">
